--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "url": "git://github.com/anonymous node/sails user/travel_site.git"
   },
   "author": "anonymous node/sails user",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "mocha": "^2.4.5"
+  }
 }
